# ftxui-plot

./: CMakeLists.txt
cmake/: ftxui.cmake
example/: CMakeLists.txt  static.cpp  stream.cpp
include/ftxui-plot/: plot.hpp
src/ftxui-plot/: plot.cpp
